--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
 												&#128270 Research Assistant at
 												<a href="https://jieliu6.github.io/" target="_blank">Liu Lab</a><br>
 												(Medical School @ University of Michigan)
-												<li>With <a href="http://www.jiaqima.com/">Jiaqi Ma</a>, instructed by <a href="https://jieliu6.github.io/">Jie Liu</a></li>
+												<li>Instructed by <a href="https://jieliu6.github.io/">Jie Liu</a></li>
 											</ul>
 										</section>
 
@@ -258,7 +258,7 @@
 												&#128270 Research Assistant at
 												<a href="http://foreseer.si.umich.edu/" target="_blank">Foreseer</a><br>
 												(School of Information @ University of Michigan)
-												<li>Instructed by <a href="http://www-personal.umich.edu/~qmei/">Qiaozhu Mei</a></li>
+												<li>With <a href="http://www.jiaqima.com/">Jiaqi Ma</a>, instructed by <a href="http://www-personal.umich.edu/~qmei/">Qiaozhu Mei</a></li>
 											</ul>
 										</section>
 
