--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 					<li><a href="#two" class="inactive">Education</a></li>
 					<li><a href="#three" class="inactive">Experience</a></li>
 					<li><a href="#four" class="inactive">Portfolio</a></li>
-					<li><a href="#five" class="inactive">Posts</a></li>
+					<li><a href="#five" class="inactive">Misc</a></li>
 				</ul>
 			</nav>
 
@@ -419,7 +419,7 @@
 
 				<!-- Five -->
 					<section id="five">
-						<h2>Posts</h2>
+						<h2>Misc</h2>
 						<ul>
 							<li>I was born and raised up in Chengdu, the home of pandas.</li>
 							<li>My dream school during high school was The University of Hong Kong (HKU),
