--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
 											<h4>August - Present</h4>
 											<ul class="research">
 												&#128270 Research Assistant at
-												<a href="http://lair.cse.msu.edu/" target="_blank">The Language And Interaction Research (LAIR)</a><br>
+												<a href="http://lair.cse.msu.edu/" target="_blank">Situated Language and Embodied Dialogue (SLED)</a><br>
 												(Department of Computer Science and Engineering @ University of Michigan)
 												<li>Instructed by <a href="https://web.eecs.umich.edu/~chaijy/">Joyce Chai</a></li>
 											</ul>
