--- a/index.html
+++ b/index.html
@@ -225,6 +225,7 @@
 											<ul class="tutor">
 												&#128214 Teaching Assistant for Artificial Intelligence<br>
 												(VE492 @ Shanghai Jiao Tong University)
+												<li>With <a href="https://weng.fr/">Paul Weng</a></li>	
 											</ul>
 										</section>
 										
@@ -233,6 +234,7 @@
 											<ul class="tutor">
 												&#128214 Teaching Assistant for Programming and Data Structure<br>
 												(<a href="https://github.com/ve280">VE280</a> @ Shanghai Jiao Tong University)
+												<li>With <a href="https://weng.fr/">Paul Weng</a></li>	
 											</ul>
 										</section>
 
@@ -276,6 +278,7 @@
 											<ul class="tutor">
 												&#128214 Teaching Assistant for Physics Lab I<br>
 												(VP141 @ Shanghai Jiao Tong University)
+												<li>With <a href="https://www.ji.sjtu.edu.cn/about/faculty-staff/faculty-directory/faculty-detail/97">Mateusz Krzyzosiak</a></li>	
 											</ul>
 										</section>
 
@@ -285,6 +288,7 @@
 												&#128270 Research Assistant at
 												<a href="https://www.acemap.info/" target="_blank">Acemap</a><br>
 												(School of Electronic Information @ Shanghai Jiao Tong University)
+												<li>Instructed by <a href="http://www.cs.sjtu.edu.cn/~wang-xb/">Xinbing Wang</a>, with <a href="https://github.com/Jie-Michael">Junjie Ou</a></li>
 											</ul>
 										</section>
 
@@ -293,6 +297,7 @@
 											<ul class="tutor">
 												&#128214 Teaching Assistant for Academic Writing II<br>
 												(VY200 @ Shanghai Jiao Tong University)
+												<li>With <a href="https://www.ji.sjtu.edu.cn/about/faculty-staff/faculty-directory/faculty-detail/125/">Ryan Thorpe</a></li>
 											</ul>
 										</section>
 
@@ -314,6 +319,7 @@
 											<ul class="tutor">
 												&#128214 Teaching Assistant for Academic Writing I<br>
 												(VY100 @ Shanghai Jiao Tong University)
+												<li>With <a href="https://www.ji.sjtu.edu.cn/about/faculty-staff/faculty-directory/faculty-detail/125/">Ryan Thorpe</a></li>
 											</ul>
 										</section>
 
@@ -356,7 +362,7 @@
 										<section>
 											<h4>June</h4>
 											<ul>
-												&#127891 Got 685/750 in College Entrance Examination
+												&#127891 Got 685/750 in College Entrance Examination. Graduated from high school :D
 											</ul>
 										</section>
 
