--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
 												&#128270 Research Assistant at
 												<a href="https://www.acemap.info/" target="_blank">Acemap</a><br>
 												(School of Electronic Information @ Shanghai Jiao Tong University)
-												<li>Instructed by <a href="http://www.cs.sjtu.edu.cn/~wang-xb/">Xinbing Wang</a>, with <a href="https://github.com/Jie-Michael">Junjie Ou</a></li>
+												<li>With <a href="https://github.com/Jie-Michael">Junjie Ou</a>, instructed by <a href="http://www.cs.sjtu.edu.cn/~wang-xb/">Xinbing Wang</a></li>
 											</ul>
 										</section>
 
@@ -362,7 +362,8 @@
 										<section>
 											<h4>June</h4>
 											<ul>
-												&#127891 Got 685/750 in College Entrance Examination. Graduated from high school :D
+												&#127891 Got 685/750 in College Entrance Examination.
+												<li>Graduated from high school :D</li>	
 											</ul>
 										</section>
 
@@ -428,6 +429,7 @@
 						<h2>Misc</h2>
 						<ul>
 							<li>I was born and raised up in Chengdu, the home of pandas.</li>
+							<li>I am proud of Chengdu Foreign Languages School, my high school, and identify myself as a CFLSer.成外人永远不会成外人。</li>
 							<li>My dream school during high school was The University of Hong Kong (HKU),
 								yet I declined the offer of BSc(QFin) in pursuit of my engineering dream.</li>
 							<li>I am a regular social media user, and I post Instagram more frequently.</li>
