--- a/index.html
+++ b/index.html
@@ -362,8 +362,8 @@
 										<section>
 											<h4>June</h4>
 											<ul>
-												&#127891 Got 685/750 in College Entrance Examination.
-												<li>Graduated from high school :D</li>	
+												&#127891 Graduated from high school :D
+												<li>Got 685/750 in The National College Entrance Examination.</li>	
 											</ul>
 										</section>
 
@@ -429,7 +429,7 @@
 						<h2>Misc</h2>
 						<ul>
 							<li>I was born and raised up in Chengdu, the home of pandas.</li>
-							<li>I am proud of Chengdu Foreign Languages School, my high school, and identify myself as a CFLSer.成外人永远不会成外人。</li>
+							<li>I am proud of Chengdu Foreign Languages School, my high school, and identify myself as a CFLSer. 成外人永远不会成外人。</li>
 							<li>My dream school during high school was The University of Hong Kong (HKU),
 								yet I declined the offer of BSc(QFin) in pursuit of my engineering dream.</li>
 							<li>I am a regular social media user, and I post Instagram more frequently.</li>
