--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
 		<!-- Header -->
 			<header>
 				<div class="inner">
-					<img src="images/avatar.jpg" alt="" />
+					<a href="images/avatar.jpg" class="image avatar">
+						<img src="#" alt="" />
+					</a>
 					<h1><strong>Ziqiao Ma</strong></h1>
 					<p>Hey, look what you just found.</p>
 				</div>
