--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 			<header>
 				<div class="inner">
 					<a href="images/avatar.jpg" class="image avatar">
-						<img src="#" alt="" />
+						<img src="images/avatar.jpg" alt="" />
 					</a>
 					<h1><strong>Ziqiao Ma</strong></h1>
 					<p>Hey, look what you just found.</p>
