--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<script>var clicky_site_ids = clicky_site_ids || []; clicky_site_ids.push(101275941);</script>
+		<script async src="//static.getclicky.com/js"></script>
 	</head>
 
 	<body class="is-preload">
