--- a/index.html
+++ b/index.html
@@ -271,7 +271,8 @@
 											<ul class="edu">
 												&#127979 Enrolled in
 												<a href="https://umich.edu/">University of Michigan</a>.
-												<li>Major: Computer Science (CS.Eng)</li>
+												<li>Major: <a href="https://cse.engin.umich.edu/academics/undergraduate/computer-science-eng/">Computer Science (CS.Eng)</a></li>
+												<li>Major: <a href="https://lsa.umich.edu/math/undergraduates/major-and-minor-programs/mathematics-minor.html">Mathematics</a></li>
 											</ul>
 										</section>
 
