--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
 												&#127979 Enrolled in
 												<a href="https://umich.edu/">University of Michigan</a>.
 												<li>Major: <a href="https://cse.engin.umich.edu/academics/undergraduate/computer-science-eng/">Computer Science (CS.Eng)</a></li>
-												<li>Major: <a href="https://lsa.umich.edu/math/undergraduates/major-and-minor-programs/mathematics-minor.html">Mathematics</a></li>
+												<li>Minor: <a href="https://lsa.umich.edu/math/undergraduates/major-and-minor-programs/mathematics-minor.html">Mathematics</a></li>
 											</ul>
 										</section>
 
