--- a/index.html
+++ b/index.html
@@ -413,7 +413,7 @@
 
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/01.jpg" class="image fit thumb">
-									<img src="images/thumbs/01.jpg" alt="" />
+									<img src="projects/seg_explainer/cover.png" alt="" />
 								</a>
 								<h3>Under Construction</h3>
 								<p>This section is to be updated...I was quite busy these days lol.</p>
