--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 		<!-- Navigator -->
 			<nav id="nav">
 				<ul>
+					<li><a href="archives/" class="inactive">Blogs</a></li>
 					<li><a href="#two" class="inactive">Education</a></li>
 					<li><a href="#three" class="inactive">Experience</a></li>
 					<li><a href="#four" class="inactive">Portfolio</a></li>
@@ -412,7 +413,7 @@
 						<div class="row">
 
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/01.jpg" class="image fit thumb">
+								<a href="projects/seg_explainer/cover.png">
 									<img src="projects/seg_explainer/cover.png" alt="" />
 								</a>
 								<h3>Under Construction</h3>
