--- a/index.html
+++ b/index.html
@@ -34,7 +34,6 @@
 		<!-- Navigator -->
 			<nav id="nav">
 				<ul>
-					<li><a href="archives/" class="inactive">Blogs</a></li>
 					<li><a href="#two" class="inactive">Education</a></li>
 					<li><a href="#three" class="inactive">Experience</a></li>
 					<li><a href="#four" class="inactive">Portfolio</a></li>
@@ -440,6 +439,7 @@
 							<li>I enjoyed travelling and have been to 12 countries. Maybe I have been to your hometown?</li>
 							<li>I am a super fan of <a href="https://nightwish.com/">Nightwish</a>.
 								My favourite album is <a href="https://music.apple.com/us/album/imaginaerum/482858875">Imaginaerum</a>.</li>
+							<li>I plan to <a href="archives/index.html">blog</a> a little bit in the future. Let me know what you want to see!</li>
 						</ul>
 					</section>
 				
