--- a/index.html
+++ b/index.html
@@ -412,7 +412,7 @@
 						<div class="row">
 
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="projects/seg_explainer/cover.png">
+								<a href="projects/seg_explainer/cover.png" class="image fit thumb">
 									<img src="projects/seg_explainer/cover.png" alt="" />
 								</a>
 								<h3>Under Construction</h3>
