--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
 					<li><a href="#two" class="inactive">Education</a></li>
 					<li><a href="#three" class="inactive">Experience</a></li>
 					<li><a href="#four" class="inactive">Portfolio</a></li>
-					<li><a href="#five" class="inactive">Misc</a></li>
+					<li><a href="#five" class="inactive">Blogs</a></li>
+					<li><a href="#six" class="inactive">Misc</a></li>
 				</ul>
 			</nav>
 
@@ -106,20 +107,20 @@
 					<div class="row">
 						<div class="column">
 							<ul class="actions">
-								<li><a href="Resume2020.pdf" class="button">Resume</a></li>
+								<li><a href="files/cv.pdf" class="button">CV</a></li>
 							</ul>
 						</div>
 						<div class="column">
 							Proficient in:<br>
 							<a href="#" target="_blank" class="button small">Python</a>
 							<a href="#" target="_blank" class="button small">C/C++</a>
+							<a href="#" target="_blank" class="button small">Java</a>
+							<a href="#" target="_blank" class="button small">JavaScript</a>
 							<a href="#" target="_blank" class="button small">Matlab</a>
 						</div>
 						<div class="column">
 							Familiar with:<br>
-							<a href="#" target="_blank" class="button small">Java</a>
-							<a href="#" target="_blank" class="button small">SQL</a>
-							<a href="#" target="_blank" class="button small">JavaScript</a>
+							<a href="#" target="_blank" class="button small">jQuery</a>
 							<a href="#" target="_blank" class="button small">Hadoop</a>
 							<a href="#" target="_blank" class="button small">R</a>
 						</div>
@@ -426,9 +427,15 @@
 						</ul>
 
 					</section>
-
+			
 				<!-- Five -->
 					<section id="five">
+						<h2>Blogs</h2>
+						I plan to <a href="archives/index.html">blog</a> a little bit in the future. Let me know what you want to see!
+					</section>
+			
+				<!-- Six -->
+					<section id="six">
 						<h2>Misc</h2>
 						<ul>
 							<li>I was born and raised up in Chengdu, the home of pandas.</li>
@@ -439,12 +446,11 @@
 							<li>I enjoyed travelling and have been to 12 countries. Maybe I have been to your hometown?</li>
 							<li>I am a super fan of <a href="https://nightwish.com/">Nightwish</a>.
 								My favourite album is <a href="https://music.apple.com/us/album/imaginaerum/482858875">Imaginaerum</a>.</li>
-							<li>I plan to <a href="archives/index.html">blog</a> a little bit in the future. Let me know what you want to see!</li>
 						</ul>
 					</section>
 				
-				<!-- Six -->
-					<section id="six">
+				<!-- Seven -->
+					<section id="seven">
 						<h2>Get In Touch</h2>
 						<p>
 							You are welcome to drop me a message :)
