--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 					<div class="row">
 						<div class="column">
 							<ul class="actions">
-								<li><a href="files/cv.pdf" class="button">CV</a></li>
+								<li><a href="files/CV.pdf" class="button">CV</a></li>
 							</ul>
 						</div>
 						<div class="column">
