--- a/index.html
+++ b/index.html
@@ -431,7 +431,7 @@
 				<!-- Five -->
 					<section id="five">
 						<h2>Blogs</h2>
-						I plan to <a href="archives/index.html">blog</a> a little bit in the future. Let me know what you want to see!
+						I plan to <a href="archives/">blog</a> a little bit in the future. Let me know what you want to see!
 					</section>
 			
 				<!-- Six -->
@@ -442,7 +442,7 @@
 							<li>I am proud of Chengdu Foreign Languages School, my high school, and identify myself as a CFLSer. 成外人永远不会成外人。</li>
 							<li>My dream school during high school was The University of Hong Kong (HKU),
 								yet I declined the offer of BSc(QFin) in pursuit of my engineering dream.</li>
-							<li>I am a regular social media user, and I post Instagram more frequently.</li>
+							<li>I love literature and drama. I am particularly interested in Shakespeare's plays, ancient Chinese drama and modern Asian literature. Here is one of my essays about <a href="files/cross-dressing.pdf">Cross-dressed Heroines in Comedies</a>.</li>
 							<li>I enjoyed travelling and have been to 12 countries. Maybe I have been to your hometown?</li>
 							<li>I am a super fan of <a href="https://nightwish.com/">Nightwish</a>.
 								My favourite album is <a href="https://music.apple.com/us/album/imaginaerum/482858875">Imaginaerum</a>.</li>
