--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<title>Martin - Ziqiao Ma</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" href="/assets/css/main.css" />
 		<script>var clicky_site_ids = clicky_site_ids || []; clicky_site_ids.push(101275941);</script>
 		<script async src="//static.getclicky.com/js"></script>
 	</head>
@@ -23,7 +23,7 @@
 		<!-- Header -->
 			<header>
 				<div class="inner">
-					<a href="images/avatar.jpg" class="image avatar">
+					<a href="/images/avatar.jpg" class="image avatar">
 						<img src="images/avatar.jpg" alt="" />
 					</a>
 					<h1><strong>Ziqiao Ma</strong></h1>
@@ -34,11 +34,10 @@
 		<!-- Navigator -->
 			<nav id="nav">
 				<ul>
-					<li><a href="#two" class="inactive">Education</a></li>
-					<li><a href="#three" class="inactive">Experience</a></li>
-					<li><a href="#four" class="inactive">Portfolio</a></li>
-					<li><a href="#five" class="inactive">Blogs</a></li>
-					<li><a href="#six" class="inactive">Misc</a></li>
+					<li><a href="#two" class="inactive">Experience</a></li>
+					<li><a href="#three" class="inactive">Portfolio</a></li>
+					<li><a href="#four" class="inactive">Blogs</a></li>
+					<li><a href="#five" class="inactive">Misc</a></li>
 				</ul>
 			</nav>
 
@@ -107,7 +106,7 @@
 					<div class="row">
 						<div class="column">
 							<ul class="actions">
-								<li><a href="files/CV.pdf" class="button">CV</a></li>
+								<li><a href="/files/CV.pdf" class="button">CV</a></li>
 							</ul>
 						</div>
 						<div class="column">
@@ -129,11 +128,11 @@
 
 				</section>
 
-			<!-- Two: Education -->
+			<!-- Two: Experience -->
 				<section id="two">
-					<div class="container">
-						<h2>Education</h2>
+					<h2>Experience</h2>
 
+						<h3>Education</h3>
 						<ul>
 							<li>
 								<b>University of Michigan, Ann Arbor</b><br>
@@ -198,14 +197,8 @@
 								<i> High School || Sept. 2011 - June 2017</i>
 							</li>
 						</ul>
-					</div>
-				</section>
 
-			<!-- Three: Experience -->
-				<section id="three">
-					<div class="container">
-						<h2>General Experience</h2>
-
+						<h3>Timeline</h3>
     					<div id="timeline">
 							<div>
 
@@ -404,38 +397,99 @@
 									</section>
 							</div>
       					</div>
-    				</div>
 				</section>
 
 				<!-- Four: Projects -->
-					<section id="four">
-						<h2>Selected Projects</h2>
+					<section id="three">
+						<h2>Selected Projects (Under Construction)</h2>
+
+						<p>This section is to be updated...I was quite busy these days lol.</p>
+
 						<div class="row">
 
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="projects/seg_explainer/cover.png" class="image fit thumb">
+								<a href="/projects/seg_explainer/cover.png" class="image fit thumb">
 									<img src="projects/seg_explainer/cover.png" alt="" />
 								</a>
-								<h3>Under Construction</h3>
-								<p>This section is to be updated...I was quite busy these days lol.</p>
+								<h3>Spatial Cell Pattern Interpretator</h3>
+								<p>
+									[<a href="https://github.com/Mars-tin/cell-seg-explainer">code</a>]
+								</p>
+								<ul>
+									<li>Descriptions to be updated...</li>
+								</ul>
+							</article>
+
+							<article class="col-6 col-12-xsmall work-item">
+								<a href="/projects/tad_level_extraction/cover.png" class="image fit thumb">
+									<img src="projects/tad_level_extraction/cover.png" alt="" />
+								</a>
+								<h3>TAD Level Architectural Stripes Caller</h3>
+								<p>
+									[<a href="https://github.com/Mars-tin/fast-stripe-calling">code</a>]
+								</p>
+								<ul>
+									<li>Descriptions to be updated...</li>
+								</ul>
+							</article>
+
+							<article class="col-6 col-12-xsmall work-item">
+								<a href="/projects/deconvol/cover.png" class="image fit thumb">
+									<img src="projects/deconvol/cover.png" alt="" />
+								</a>
+								<h3>Issue Specific HiC De-convolution</h3>
+								<p>
+									[<a href="#">code</a>]
+								</p>
+								<ul>
+									<li>Descriptions to be updated...</li>
+								</ul>
+							</article>
+
+							<article class="col-6 col-12-xsmall work-item">
+								<a href="/projects/insta_mini/cover.png" class="image fit thumb">
+									<img src="projects/insta_mini/cover.png" alt="" />
+								</a>
+								<h3>Instagram MINI</h3>
+								<p>
+									[<a href="#">code</a>]
+								</p>
+								<ul>
+									<li>Descriptions to be updated...</li>
+								</ul>
+							</article>
+
+							<article class="col-6 col-12-xsmall work-item">
+								<a href="/projects/glove_band/cover.png" class="image fit thumb">
+									<img src="projects/glove_band/cover.png" alt="" />
+								</a>
+								<h3>Glove Band</h3>
+								<p>
+									[<a href="#">report</a>][<a href="#">code</a>]
+								</p>
+								<ul>
+									<li>Descriptions to be updated...</li>
+								</ul>
 							</article>
 
 						</div>
 
 						<ul class="actions">
-							<li><a href="#" class="button">Full Portfolio</a></li>
+							<li><a href="/projects/" class="button">Full Portfolio</a></li>
 						</ul>
 
 					</section>
 			
 				<!-- Five -->
-					<section id="five">
+					<section id="four">
 						<h2>Blogs</h2>
-						I plan to <a href="archives/">blog</a> a little bit in the future. Let me know what you want to see!
+						<p>
+							Check my blog <a href="/archives/">here</a>. Let me know what you want to see!
+						</p>
 					</section>
 			
 				<!-- Six -->
-					<section id="six">
+					<section id="five">
 						<h2>Misc</h2>
 						<ul>
 							<li>I was born and raised up in Chengdu, the home of pandas.</li>
@@ -450,7 +504,7 @@
 					</section>
 				
 				<!-- Seven -->
-					<section id="seven">
+					<section id="six">
 						<h2>Get In Touch</h2>
 						<p>
 							You are welcome to drop me a message :)
@@ -525,14 +579,14 @@
 		</div>
 
 		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.poptrox.min.js"></script>
-			<script src="assets/js/jquery.scrollex.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
+			<script src="/assets/js/jquery.min.js"></script>
+			<script src="/assets/js/jquery.poptrox.min.js"></script>
+			<script src="/assets/js/jquery.scrollex.min.js"></script>
+			<script src="/assets/js/jquery.scrolly.min.js"></script>
+			<script src="/assets/js/browser.min.js"></script>
+			<script src="/assets/js/breakpoints.min.js"></script>
+			<script src="/assets/js/util.js"></script>
+			<script src="/assets/js/main.js"></script>
 
 	</body>
 </html>
