--- a/projects/index.html
+++ b/projects/index.html
@@ -35,7 +35,7 @@
 			<nav id="nav">
 				<ul>
 					<li><a href="/" class="inactive">Home</a></li>
-					<li><a href="#one" class="inactive">Blogs</a></li>
+					<li><a href="#one" class="inactive">Projects</a></li>
 				</ul>
 			</nav>
 
@@ -77,10 +77,12 @@
 			<!-- One: Blogs -->
 				<section id="one">
 					<header class="major">
-						<h2>Blogs</h2>
+						<h2>Projects</h2>
 					</header>
 					<p>
-						Hmmm...So this is where I plan to blog a little bit later. Let me know what you want to see.
+						Here is my full portfolio. Right now I am quite busy and does not have time to
+						update all my projects here. But I plan to do so sometime later this year.
+						Please come back later :)
 					</p>
 				</section>
 
