--- a/index.html
+++ b/index.html
@@ -399,7 +399,7 @@
       					</div>
 				</section>
 
-				<!-- Four: Projects -->
+				<!-- Three: Projects -->
 					<section id="three">
 						<h2>Selected Projects (Under Construction)</h2>
 
@@ -480,7 +480,7 @@
 
 					</section>
 			
-				<!-- Five -->
+				<!-- Four -->
 					<section id="four">
 						<h2>Blogs</h2>
 						<p>
@@ -488,7 +488,7 @@
 						</p>
 					</section>
 			
-				<!-- Six -->
+				<!-- Fiv -->
 					<section id="five">
 						<h2>Misc</h2>
 						<ul>
@@ -503,7 +503,7 @@
 						</ul>
 					</section>
 				
-				<!-- Seven -->
+				<!-- Six -->
 					<section id="six">
 						<h2>Get In Touch</h2>
 						<p>
@@ -566,6 +566,10 @@
 						</div>
 					</section>
 
+				<!-- Seven -->
+					<section id="seven">
+						<script type="text/javascript" id="clstr_globe" src="//clustrmaps.com/globe.js?d=BdM4F6rm-cbia-mSJD86LvnTCb-KIWmzSzcrrruhefk"></script>
+					</section>
 
 				<!-- Footer -->
 					<section id="footer">
