--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="/assets/css/main.css" />
 		<script>var clicky_site_ids = clicky_site_ids || []; clicky_site_ids.push(101275941);</script>
-		<script async src="//static.getclicky.com/js"></script>
 	</head>
 
 	<body class="is-preload">
@@ -143,19 +142,14 @@
 										<span style="font-size: small; "><ul class="alt">
 											<li>Machine Learning (A+)</li>
 											<li>Artificial Intelligence (A)</li>
-											<li>Web Systems (A)</li>
+											<li>Numerical Analysis (A+)</li>
 										</ul></span>
 								  	</div>
 								  	<div class="column">
 										<span style="font-size: small; "><ul class="alt">
-											<li>Data Structure and Algorithm (A)</li>
-											<li>Computer Organization (A+)</li>
-										</ul></span>
-								  	</div>
-									<div class="column">
-										<span style="font-size: small; "><ul class="alt">
-											<li>Numerical Analysis (A+)</li>
-											<li>Probability Theory (A)</li>
+											<li>Natural Language Processing (in progress)</li>
+											<li>Deep Learning (in progress)</li>
+											<li>Computer Vision (in progress)</li>
 										</ul></span>
 								  	</div>
 								</div>
@@ -564,11 +558,11 @@
 							</div>
 
 						</div>
-					</section>
 
-				<!-- Seven -->
-					<section id="seven">
-						<script type="text/javascript" id="clstr_globe" src="//clustrmaps.com/globe.js?d=BdM4F6rm-cbia-mSJD86LvnTCb-KIWmzSzcrrruhefk"></script>
+						<div>
+							<script type="text/javascript" id="clustrmaps" src="//cdn.clustrmaps.com/map_v2.js?cl=b7bbce&w=a&t=n&d=BdM4F6rm-cbia-mSJD86LvnTCb-KIWmzSzcrrruhefk&co=ffffff&cmn=fff200&cmo=ff0000&ct=000000"></script>
+						</div>
+
 					</section>
 
 				<!-- Footer -->
