--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="/assets/css/main.css" />
-		<script>var clicky_site_ids = clicky_site_ids || []; clicky_site_ids.push(101275941);</script>
 	</head>
 
 	<body class="is-preload">
@@ -395,74 +394,81 @@
 
 				<!-- Three: Projects -->
 					<section id="three">
-						<h2>Selected Projects (Under Construction)</h2>
-
-						<p>This section is to be updated...I was quite busy these days lol.</p>
+						<h2>Selected Projects</h2>
 
 						<div class="row">
 
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="/projects/seg_explainer/cover.png" class="image fit thumb">
-									<img src="projects/seg_explainer/cover.png" alt="" />
+								<a href="projects/2020/seg_explainer/cover.png" class="image fit thumb">
+									<img src="projects/2020/seg_explainer/cover.png" alt="" />
 								</a>
-								<h3>Spatial Cell Pattern Interpretator</h3>
+								<h3>GNN Prediction Interpretation: Spatial Cell Patterns of T2D Islets <i>(Research)</i></h3>
 								<p>
 									[<a href="https://github.com/Mars-tin/cell-seg-explainer">code</a>]
 								</p>
 								<ul>
-									<li>Descriptions to be updated...</li>
+									<li>Instructed by <a href="https://jieliu6.github.io/">Jie Liu</a> and <a href="https://medicine.vumc.org/person/marcela-brissova-phd">Marcela Brissova</a>.</li>
+									<li>Redesign the GNN Explainer to perform label-wise explanation, validate the model on T2D islet samples and extract predictive spatial patterns. </li>
+									<li>Actively on-going...</li>
 								</ul>
 							</article>
 
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="/projects/tad_level_extraction/cover.png" class="image fit thumb">
-									<img src="projects/tad_level_extraction/cover.png" alt="" />
+								<a href="projects/2020/tad_level_extraction/cover.png" class="image fit thumb">
+									<img src="projects/2020/tad_level_extraction/cover.png" alt="" />
 								</a>
-								<h3>TAD Level Architectural Stripes Caller</h3>
+								<h3>TAD Level Architectural Feature Extraction Caller <i>(Research)</i></h3>
 								<p>
 									[<a href="https://github.com/Mars-tin/fast-stripe-calling">code</a>]
 								</p>
 								<ul>
-									<li>Descriptions to be updated...</li>
+									<li>Instructed by <a href="https://jieliu6.github.io/">Jie Liu</a> and <a href="https://www.pathology.med.umich.edu/faculty/xiaozhan">Xiaotian Zhang</a>.</li>
+									<li>Extract TAD level architectural stripes from HiC, evaluate the quality and compare between cell lines.</li>
+									<li>Todo: extend the algorithm to inversions and het deletions.</li>
 								</ul>
 							</article>
 
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="/projects/deconvol/cover.png" class="image fit thumb">
-									<img src="projects/deconvol/cover.png" alt="" />
+								<a href="projects/2020/deconvol/cover.png" class="image fit thumb">
+									<img src="projects/2020/deconvol/cover.png" alt="" />
 								</a>
-								<h3>Issue Specific HiC De-convolution</h3>
+								<h3>Tissue Specific HiC De-convolution with ATAC-seq Input <i>(Research)</i></h3>
 								<p>
-									[<a href="#">code</a>]
+									[<a href="https://github.com/Mars-tin/deconvhic">code</a>]
 								</p>
 								<ul>
-									<li>Descriptions to be updated...</li>
+									<li>Instructed by <a href="https://jieliu6.github.io/">Jie Liu</a>.</li>
+									<li>Deconvolute the islet tissue specific HiC into single cell HiC specific to alpha and beta cells, and validate the results on synthetic and real dataset.</li>
+									<li>Todo: extend the algorithm to minority cell types like delta cells.</li>
 								</ul>
 							</article>
 
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="/projects/insta_mini/cover.png" class="image fit thumb">
-									<img src="projects/insta_mini/cover.png" alt="" />
+								<a href="projects/2020/insta_mini/cover.png" class="image fit thumb">
+									<img src="projects/2020/insta_mini/cover.png" alt="" />
 								</a>
 								<h3>Instagram MINI</h3>
 								<p>
-									[<a href="#">code</a>]
+									[code: upon request]
 								</p>
 								<ul>
-									<li>Descriptions to be updated...</li>
+									<li>Project of EECS485, Web Systems.</li>
+									<li>A cloned client-side dynamic Instagram.</li>
 								</ul>
 							</article>
 
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="/projects/glove_band/cover.png" class="image fit thumb">
-									<img src="projects/glove_band/cover.png" alt="" />
+								<a href="projects/2018/glove_band/cover.png" class="image fit thumb">
+									<img src="projects/2018/glove_band/cover.png" alt="" />
 								</a>
 								<h3>Glove Band</h3>
 								<p>
-									[<a href="#">report</a>][<a href="#">code</a>]
+									[<a href="https://drive.google.com/file/d/1L_r4rktZLMsNnVKVQK8JUs7I6TwcJPdH/view?usp=sharing">report</a>]
 								</p>
 								<ul>
-									<li>Descriptions to be updated...</li>
+									<li>Instructed by <a href="https://www.ji.sjtu.edu.cn/about/faculty-staff/faculty-directory/faculty-detail/119/">Yanfeng Shen</a>.</li>
+									<li>Final Project of VG100, Intro to Engineering.</li>
+									<li>A pair of multi-instrumental MIDI-controlling gloves.</li>
 								</ul>
 							</article>
 
