--- a/projects/index.html
+++ b/projects/index.html
@@ -13,8 +13,6 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="/assets/css/main.css" />
-		<script>var clicky_site_ids = clicky_site_ids || []; clicky_site_ids.push(101275941);</script>
-		<script async src="//static.getclicky.com/js"></script>
 	</head>
 
 	<body class="is-preload">
@@ -74,20 +72,208 @@
 	<!-- Main -->
 		<div id="main">
 
-			<!-- One: Blogs -->
+			<!-- One: Summary -->
 				<section id="one">
 					<header class="major">
-						<h2>Projects</h2>
+						<h2>Full Portfolio</h2>
 					</header>
 					<p>
 						Here is my full portfolio. Right now I am quite busy and does not have time to
 						update all my projects here. But I plan to do so sometime later this year.
-						Please come back later :)
+					</p>
+					<p>
+						For some projects, details are available upon request.
 					</p>
 				</section>
 
-				<!-- Two -->
-					<section id="two">
+			<!-- Two: 2020 -->
+				<section id="two">
+
+					<h2>2020</h2>
+
+						<div class="row">
+
+							<article class="col-6 col-12-xsmall work-item">
+								<a href="./2020/seg_explainer/cover.png" class="image fit thumb">
+									<img src="./2020/seg_explainer/cover.png" alt="" />
+								</a>
+								<h3>GNN Prediction Interpretation: Spatial Cell Patterns of T2D Islets <i>(Research)</i></h3>
+								<p>
+									[<a href="https://github.com/Mars-tin/cell-seg-explainer">code</a>]
+								</p>
+								<ul>
+									<li>Instructed by <a href="https://jieliu6.github.io/">Jie Liu</a> and <a href="https://medicine.vumc.org/person/marcela-brissova-phd">Marcela Brissova</a>.</li>
+									<li>Redesign the GNN Explainer to perform label-wise explanation, validate the model on T2D islet samples and extract predictive spatial patterns. </li>
+									<li>Actively on-going...</li>
+								</ul>
+							</article>
+
+							<article class="col-6 col-12-xsmall work-item">
+								<a href="./2020/tad_level_extraction/cover.png" class="image fit thumb">
+									<img src="./2020/tad_level_extraction/cover.png" alt="" />
+								</a>
+								<h3>TAD Level Architectural Feature Extraction Caller <i>(Research)</i></h3>
+								<p>
+									[<a href="https://github.com/Mars-tin/fast-stripe-calling">code</a>]
+								</p>
+								<ul>
+									<li>Instructed by <a href="https://jieliu6.github.io/">Jie Liu</a> and <a href="https://www.pathology.med.umich.edu/faculty/xiaozhan">Xiaotian Zhang</a>.</li>
+									<li>Extract TAD level architectural stripes from HiC, evaluate the quality and compare between cell lines.</li>
+									<li>Todo: extend the algorithm to inversions and het deletions.</li>
+								</ul>
+							</article>
+
+							<article class="col-6 col-12-xsmall work-item">
+								<a href="./2020/deconvol/cover.png" class="image fit thumb">
+									<img src="./2020/deconvol/cover.png" alt="" />
+								</a>
+								<h3>Tissue Specific HiC De-convolution with ATAC-seq Input <i>(Research)</i></h3>
+								<p>
+									[<a href="https://github.com/Mars-tin/deconvhic">code</a>]
+								</p>
+								<ul>
+									<li>Instructed by <a href="https://jieliu6.github.io/">Jie Liu</a>.</li>
+									<li>Deconvolute the islet tissue specific HiC into single cell HiC specific to alpha and beta cells, and validate the results on synthetic and real dataset.</li>
+									<li>Todo: extend the algorithm to minority cell types like delta cells.</li>
+								</ul>
+							</article>
+
+							<article class="col-6 col-12-xsmall work-item">
+								<a href="./2020/insta_mini/cover.png" class="image fit thumb">
+									<img src="./2020/insta_mini/cover.png" alt="" />
+								</a>
+								<h3>Instagram MINI <i>(Course)</i></h3>
+								<a>
+									[<a href="https://eecs485staff.github.io/p3-insta485-clientside/">description</a>][code: upon request]
+								</p>
+								<ul>
+									<li>Project of EECS485, Web Systems.</li>
+									<li>A cloned client-side dynamic Instagram.</li>
+								</ul>
+							</article>
+
+						</div>
+
+				</section>
+
+			<!-- Three: 2019 -->
+			    <section id="three">
+
+					<h2>2019</h2>
+
+						<div class="row">
+
+							<article class="col-6 col-12-xsmall work-item">
+								<a href="./2019/curvature_flow/cover.png" class="image fit thumb">
+									<img src="./2019/curvature_flow/cover.png" alt="" />
+								</a>
+								<h3>Curvature Flow <i>(Course)</i></h3>
+								<p>
+									[<a href="https://github.com/Mars-tin/curvature-flow/blob/master/report.pdf">report</a>]
+									[<a href="https://github.com/Mars-tin/curvature-flow">code</a>]
+								</p>
+								<ul>
+									<li>Instructed by <a href="http://www.math.lsa.umich.edu/~shravan/">Shravan Veerapaneni</a>.</li>
+									<li>Project of MATH371, Numerical Analysis.</li>
+									<li>Apply Euler Method to de-noise a predefined initial 2D-curve surface and obtain a smoothed curve.</li>
+								</ul>
+							</article>
+
+							<article class="col-6 col-12-xsmall work-item">
+								<a href="./2019/shooting_cases/cover.png" class="image fit thumb">
+									<img src="./2019/shooting_cases/cover.png" alt="" />
+								</a>
+								<h3>Police Shooting Cases Analysis <i>(Course)</i></h3>
+								<p>
+									[<a href="https://github.com/Mars-tin/shooting-cases-analysis/blob/master/Report.pdf">report</a>]
+									[<a href="https://github.com/Mars-tin/shooting-cases-analysis/">code</a>]
+								</p>
+								<ul>
+									<li>Instructed by <a href="http://umji.sjtu.edu.cn/~horst/">Horst Hohberger</a>.</li>
+									<li>Project of VE401, Statistics and Probability.</li>
+									<li>Model the the number of mass shootings and make prediction for cases in 2019 based on the data for 2015 to 2018.</li>
+								</ul>
+							</article>
+
+							<article class="col-6 col-12-xsmall work-item">
+								<a href="./2019/package_content/cover.jpg" class="image fit thumb">
+									<img src="./2019/package_content/cover.jpg" alt="" />
+								</a>
+								<h3>Food Package Content Analysis <i>(Course)</i></h3>
+								<p>
+									[<a href="https://github.com/Mars-tin/food-package-content-analysis/blob/master/Report.pdf">report</a>]
+									[<a href="https://github.com/Mars-tin/food-package-content-analysis">code</a>]
+								</p>
+								<ul>
+									<li>Instructed by <a href="http://umji.sjtu.edu.cn/~horst/">Horst Hohberger</a>.</li>
+									<li>Project of VE401, Statistics and Probability.</li>
+									<li>Investigate the metrological testing for net quantities of products in prepackages with fixed content, issued by Chinese government in 2005.</li>
+								</ul>
+							</article>
+						</div>
+
+				</section>
+
+			<!-- Four: 2018 -->
+
+			    <section id="four">
+
+					<h2>2018</h2>
+
+						<div class="row">
+
+							<article class="col-6 col-12-xsmall work-item">
+								<a href="./2018/glove_band/cover.png" class="image fit thumb">
+									<img src="./2018/glove_band/cover.png" alt="" />
+								</a>
+								<h3>Glove Band <i>(Course)</i></h3>
+								<p>
+									[<a href="https://drive.google.com/file/d/1L_r4rktZLMsNnVKVQK8JUs7I6TwcJPdH/view?usp=sharing">report</a>]
+								</p>
+								<ul>
+									<li>Instructed by <a href="https://www.ji.sjtu.edu.cn/about/faculty-staff/faculty-directory/faculty-detail/119/">Yanfeng Shen</a>.</li>
+									<li>Final Project of VG100, Intro to Engineering.</li>
+									<li>A pair of multi-instrumental MIDI-controlling gloves.</li>
+								</ul>
+							</article>
+
+							<article class="col-6 col-12-xsmall work-item">
+								<a href="./2018/bridge_crane/cover.jpg" class="image fit thumb">
+									<img src="./2018/bridge_crane/cover.jpg" alt="" />
+								</a>
+								<h3>Glove Band <i>(Course)</i></h3>
+								<p>
+									[<a href="https://drive.google.com/file/d/1lZpN5f3_qHV2oVW9vlGoFpzl6Da3qTPn/view?usp=sharing">report</a>]
+								</p>
+								<ul>
+									<li>Instructed by <a href="https://www.ji.sjtu.edu.cn/about/faculty-staff/faculty-directory/faculty-detail/119/">Yanfeng Shen</a>.</li>
+									<li>Mid Project of VG100, Intro to Engineering. Rank #2.</li>
+									<li>A bridge-crane system.</li>
+								</ul>
+							</article>
+
+							<article class="col-6 col-12-xsmall work-item">
+								<a href="./2018/optical_caustic/cover.png" class="image fit thumb">
+									<img src="./2018/optical_caustic/cover.png" alt="" />
+								</a>
+								<h3>Optical Caustic Analysis <i>(Course)</i></h3>
+								<p>
+									[<a href="https://github.com/Mars-tin/optical-caustic-analysis/blob/master/Report.pdf">report</a>]
+									[<a href="https://github.com/Mars-tin/optical-caustic-analysis">code</a>]
+								</p>
+								<ul>
+									<li>Instructed by <a href="http://umji.sjtu.edu.cn/~horst/">Horst Hohberger</a>.</li>
+									<li>Project of VV285, Honors Mathematics. Rank #1.</li>
+									<li>Model the optical phenomenon of caustic in the coffee cup and perform simulations.</li>
+								</ul>
+							</article>
+
+						</div>
+
+				</section>
+
+				<!-- Five -->
+					<section id="five">
 						<h2>Feedback</h2>
 						<p>
 							You are welcome to drop me a message :)
